# glfw_window_test

./: ANIMATION_SYSTEM.md  CMakeLists.txt  Makefile  README.md  config.ini  linux.cmake  mingw-w64-x86_64.cmake
assets/img/sprites/: aliens-head.aseprite
include/: Node.h  Rectangle.h  Scene.h  SceneLoader.h  Script.h  ScriptImpl.h  Triangle.h
include/core/: Camera.h  GameLoop.h  GameSettings.h  GameSetup.h  Input.h  Math.h  Node.h  NodeTypeMap.h  Scene.h  SceneLoader.h  Window.h
include/core/render/: OpenGLRenderDriver.h  RenderDevice.h  RenderDriver.h
include/core/window/: OpenGLWindow.h  Window.h
include/entities/: Rectangle.h  Triangle.h
include/nodes/: Animation2D.h  Node.h  Node2D.h  Node3D.h  NodeTypeMap.h  OscillatingRectangle.h  PulsingTriangle.h  Rectangle.h  RotatingTriangle.h  Sprite2D.h  Triangle.h
include/scene/: AliensDemoScene.h  ColorfulScene.h  MinimalScene.h  Scene.h  SceneLoader.h  SimpleScene.h  TestScene.h  YamlParser.h
include/scripts/: OscillatingRectangle.h  PulsingTriangle.h  RotatingTriangle.h  Scripts.h
scenes/: aliens_demo.yaml  colorful.scn  colorful.yaml  default.scn  inheritance_demo.scn  minimal.scn  minimal.yaml  simple.yaml  test.yaml
src/: Animation2D.cpp  Camera.cpp  GameSettings.cpp  Sprite2D.cpp  YamlParser.cpp  main.cpp
